Adicionando conteúdo do site

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <a href="#section3" class="button">AIVRSE</a>
     </div>
     <div class="hero-image">
-      <img src="imagelarasf.png" alt="Lara E. Negreiros">
+      <img src="/imagens/imagelarasf.png" alt="Lara E. Negreiros">
     </div>
   </section>
 
@@ -282,27 +282,27 @@
   <div class="flag">
     <i class="fas fa-clock"></i> Em Breve!
   </div>
-  <img src="/logoaivrse1transp.png" alt="logoaivrse" width="300px">
+  <img src="/imagens/logoaivrse1transp.png" alt="logoaivrse" width="300px">
   <!-- <h2>AIVRSE Studio</h2> -->
   <p>Em breve, o estúdio AIVRSE oferecerá serviços em Realidade Virtual, Realidade Aumentada e Tour 360°, trazendo experiências imersivas para os seus projetos.</p>
 
   <div class="section3-container">
     <div class="section3-card">
-      <img src="/c1fdd273-a429-422d-b07c-8cf864421bb6.png" alt="Tour Virtual 360°">
+      <img src="/imagens/360img.png" alt="Tour Virtual 360°">
       <div class="texto">
         <h3>Tour Virtual 360°</h3>
         <p>Explore ambientes de forma imersiva e realista com nossos tours virtuais. Ideal para ambientes internos, residenciais, comerciais e mais.</p>
       </div>
     </div>
     <div class="section3-card">
-      <img src="/e92f82bb-d667-4378-bce9-daec438bfb13.png" alt="Realidade Aumentada">
+      <img src="/imagens/arimg.png" alt="Realidade Aumentada">
       <div class="texto">
         <h3>Realidade Aumentada</h3>
         <p>Traga projetos à vida com realidade aumentada, visualizando objetos em 3D diretamente no ambiente real através do celular ou tablet.</p>
       </div>
     </div>
     <div class="section3-card">
-      <img src="/733f0d46-c7cf-48aa-97b8-a15ead36f642.png" alt="Realidade Virtual">
+      <img src="/imagens/vrimg.png" alt="Realidade Virtual">
       <div class="texto">
         <h3>Realidade Virtual</h3>
         <p>Ofereça experiências completamente imersivas com realidade virtual, ideais para treinamentos, eventos e demonstrações inovadoras.</p>
