Atualizações no código: correções e melhorias

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,21 @@
       text-align: center;
       padding: 20px 10px; /* Padding reduzido */
     }
+    .btn-voltar {
+  display: inline-block;
+  margin: 2rem;
+  padding: 0.5rem 1rem;
+  background-color: #3d3d3d3f;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 8px;
+  font-size: 0.9rem;
+  transition: background-color 0.3s;
+}
+
+.btn-voltar:hover {
+  background-color: #333;
+}
 
     header h1 {
       font-size: 1.5rem;
@@ -97,6 +112,7 @@
   </style>
 </head>
 <body>
+   
   <!-- Cabeçalho -->
   <header>
     <h2>AX-LARA</h2>
@@ -189,6 +205,7 @@
       <a href="https://www.linkedin.com/in/laranegreiros/" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://wa.me/+5584996249406" target="_blank"><i class="fab fa-whatsapp"></i></a>
     </div>
+    <a href="index.html" class="btn-voltar">Voltar</a>
   </footer>
 </body>
 </html>
