--- a/portfolio.html
+++ b/portfolio.html
@@ -10,47 +10,49 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color: #111; /* Corpo escuro */
+      background-color: #111;
       color: #ccc;
       line-height: 1.7;
     }
 
     header {
-      background-color: #f0f0f0; /* Cabeçalho claro */
+      background-color: #f0f0f0;
       color: #111;
       text-align: center;
-      padding: 20px 10px; /* Padding reduzido */
+      padding: 10px 10px;
     }
-    .btn-voltar {
-  display: inline-block;
-  margin: 2rem;
-  padding: 0.5rem 1rem;
-  background-color: #3d3d3d3f;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 8px;
-  font-size: 0.9rem;
-  transition: background-color 0.3s;
-}
 
-.btn-voltar:hover {
-  background-color: #333;
-}
+    header h2 {
+      font-size: 1.3rem;
+      color: #00f0ff;
+      margin: 0;
+    }
 
     header h1 {
       font-size: 1.5rem;
-      margin: 0;
-    }
-    header h2 {
-        font-size: 1.3rem;
-      color: #00f0ff;
-
+      margin: 5px 0;
     }
 
     header p {
-      font-size: 1rem;
+      font-size: 0.9rem;
       color: #555;
-      margin-top: 5px;
+      margin: 5px 0;
+    }
+
+    .btn-voltar {
+      display: inline-block;
+      margin: 2rem;
+      padding: 0.5rem 1rem;
+      background-color: #3d3d3d3f;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 0.9rem;
+      transition: background-color 0.3s;
+    }
+
+    .btn-voltar:hover {
+      background-color: #333;
     }
 
     .container {
@@ -62,7 +64,7 @@
     .intro {
       margin-bottom: 30px;
       text-align: center;
-      padding: 0 10px; /* Padding reduzido */
+      padding: 0 10px;
     }
 
     .intro p {
@@ -112,7 +114,6 @@
   </style>
 </head>
 <body>
-   
   <!-- Cabeçalho -->
   <header>
     <h2>AX-LARA</h2>
@@ -125,13 +126,13 @@
     <!-- Introdução -->
     <div class="intro">
       <p>
-        Olá! Sou Lara E. Negreiros, freelancer especializada em criar experiências imersivas através da modelagem 3D, tours virtuais 360° e, em breve, projetos em Realidade Virtual (VR) e Realidade Aumentada (AR).
+        Esta página apresenta de forma objetiva minhas stacks, habilidades técnicas e ferramentas utilizadas nos serviços como freelancer em experiências imersivas.
       </p>
       <p>
-        Atualmente desenvolvo projetos e entrego modelagem 3D otimizada com texturas e iluminação de qualidade para integração em diferentes plataformas.
+        Atuo com modelagem 3D otimizada, criação de tours virtuais 360°, integração em plataformas web, além do desenvolvimento de projetos em Realidade Aumentada (AR) e Realidade Virtual (VR).
       </p>
       <p>
-        Além das tecnologias e habilidades demonstradas, também utilizo Inteligência Artificial para otimizar processos e acelerar fluxos de trabalho. Acredito na integração contínua entre ferramentas e na facilidade que temos hoje de aprimorar e expandir nossos conhecimentos. Tenho facilidade de adaptação e aprendizado de novos softwares e tecnologias, mantendo sempre uma mente aberta para evolução e inovações no campo digital.
+        Também utilizo ferramentas de Inteligência Artificial para acelerar fluxos de trabalho, mantendo uma postura de constante aprendizado e adaptação a novas tecnologias.
       </p>
     </div>
 
@@ -185,14 +186,13 @@
       <h2>Formação Acadêmica</h2>
       <ul>
         <li>Especialização em Projeto de Arquitetura: da concepção ao edifício – PUC PR (2018)</li>
-        <li>Bacharelado em Arquitetura e Urbanismo – UNP (2015) </li>
-      
+        <li>Bacharelado em Arquitetura e Urbanismo – UNP (2015)</li>
       </ul>
       <h2>Cursos Complementares</h2>
       <ul>
-        <li>Desenvolvedor Full-stack – SENAC </li>
+        <li>Desenvolvedor Full-stack – SENAC</li>
         <li>CAP Light Design - Iluminação Comercial e Corporativa - IPOG</li>
-        <li>Neuroarquitetura - Princípios de Neurociência Aplicada - Neuroarq Academy </li>
+        <li>Neuroarquitetura - Princípios de Neurociência Aplicada - Neuroarq Academy</li>
         <li>Produto & Projeto de Mobiliário - Dalmobile fabric.</li>
       </ul>
     </div>
