--- a/index.html
+++ b/index.html
@@ -126,7 +126,22 @@
       color: #cceeff;
     }
 
-  
+  @media (max-width: 600px) {
+  .section2 {
+    padding: 1.5rem 1rem;
+    text-align: center;
+  }
+
+  .section2 h2 {
+    font-size: 1.6rem;
+    white-space: nowrap;
+  }
+
+  .section2 p {
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+}
 /* Seção AIVRSE */
 /* Seção AIVRSE */
 .section3 {
