--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         padding: 1.5rem 1rem;
       }
       .section2 h2 {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
       }
       .section2 .ola {
         font-size: 1.8rem;
@@ -209,23 +209,20 @@
     }
 
     @media (max-width: 768px) {
-      .service-card.responsive-card {
-    flex-direction: column; /* Coloca imagem e texto em coluna */
+      .service-card {
+    flex-direction: column; /* Altera para coluna no mobile */
     align-items: center; /* Centraliza verticalmente */
     text-align: center; /* Alinha texto ao centro */
   }
 
-  .service-card.responsive-card img {
+  .service-card img {
     width: 100%; /* Imagem ocupa toda a largura */
     height: auto; /* Mantém proporção correta */
-    margin: 0 auto 20px; /* Centraliza a imagem */
+    margin: 0 auto 15px; /* Centraliza e adiciona espaço abaixo */
   }
 
-  .service-card.responsive-card .texto {
+  .service-card .texto {
     text-align: center; /* Alinha texto ao centro */
-  }
-  .service-card, h3{
-    font-size: 0.8rem;
   }
     }
 
@@ -332,7 +329,7 @@
       <p>Minha jornada começou na arquitetura e urbanismo, com especialização em projetos arquitetônicos e neuroarquitetura, onde criei experiência em percepção espacial e design efetivo de ambientes. Com o tempo, surgiu o desejo e necessidade de ir além dos limites tradicionais da arquitetura, o que me levou a explorar a tecnologia como novo campo de atuação.</p>
       <p>Durante essa transição, aprofundei meus estudos em programação e descobri as tecnologias imersivas (XR), onde encontrei a conexão perfeita entre minha bagagem em arquitetura e as novas possibilidades digitais. A partir daí, passei a expandir minhas habilidades na criação de ambientes digitais interativos.</p>
       <p>Hoje, me especializo em criar experiências imersivas utilizando softwares e tecnologias que permitem transformar espaços físicos em ambientes digitais interativos. Além disso, ofereço serviços como <strong>freelancer em modelagem 3D otimizada para ambientes interativos</strong> e <strong>tours virtuais 360°</strong>, com soluções personalizadas para diversos tipos de projetos.</p>
-      <p>Em breve, estarei lançando oficialmente o estúdio AIVRSE, focado na criação de mundos virtuais personalizados e no desenvolvimento de experiências imersivas. Através dele, pretendo oferecer soluções inovadoras para diferentes áreas e necessidades virtuais.</p>
+      <p>Em breve, estarei lançando oficialmente a AIVRSE, focado na criação de mundos virtuais personalizados e no desenvolvimento de experiências imersivas. Através dele, pretendo oferecer soluções inovadoras para diferentes áreas e necessidades virtuais.</p>
     </div>
   </section>
 
