--- a/portfolio.html
+++ b/portfolio.html
@@ -7,114 +7,158 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: #111;
-      color: #ccc;
-      line-height: 1.7;
-    }
+   body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background-color: #111;
+  color: #ccc;
+  line-height: 1.7;
+}
 
-    header {
-      background-color: #f0f0f0;
-      color: #111;
-      text-align: center;
-      padding: 10px 10px;
-    }
+header {
+  background-color: #f0f0f0;
+  color: #111;
+  text-align: center;
+  padding: 10px 10px;
+}
 
-    header h2 {
-      font-size: 1.3rem;
-      color: #00f0ff;
-      margin: 0;
-    }
+header h2 {
+  font-size: 1.3rem;
+  color: #00f0ff;
+  margin: 0;
+}
 
-    header h1 {
-      font-size: 1.5rem;
-      margin: 5px 0;
-    }
+header h1 {
+  font-size: 1.5rem;
+  margin: 5px 0;
+}
 
-    header p {
-      font-size: 0.9rem;
-      color: #555;
-      margin: 5px 0;
-    }
+header p {
+  font-size: 0.9rem;
+  color: #555;
+  margin: 5px 0;
+}
 
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
+.container {
+  max-width: 900px;
+  margin: 40px auto;
+  padding: 0 20px;
+}
 
-    .intro {
-      margin-bottom: 30px;
-      text-align: center;
-      padding: 0 10px;
-    }
+.intro {
+  margin-bottom: 30px;
+  text-align: center;
+  padding: 0 10px;
+}
 
-    .intro p {
-      font-size: 1.1rem;
-      color: #bbb;
-      margin-bottom: 15px;
-    }
+.intro p {
+  font-size: 1.1rem;
+  color: #bbb;
+  margin-bottom: 15px;
+}
 
-    .section {
-      margin-bottom: 40px;
-    }
+.section {
+  margin-bottom: 40px;
+}
 
-    .section h2 {
-      font-size: 1.5rem;
-      color: #00f0ff;
-      margin-bottom: 15px;
-    }
+.section h2 {
+  font-size: 1.5rem;
+  color: #00f0ff;
+  margin-bottom: 15px;
+}
 
-    .section ul {
-      list-style-type: disc;
-      padding-left: 20px;
-    }
+.section ul {
+  list-style-type: disc;
+  padding-left: 20px;
+}
 
-    .section li {
-      margin-bottom: 10px;
-      color: #bbb;
-    }
-    .btn-voltar {
-      background-color: #1a1a1a;
-      border: 1px solid #00fff7;
-      color: #00fff7;
-      padding: 10px 20px;
-      border-radius: 8px;
-      font-size: 1em;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      position: absolute;
-      left: 20px;
-      z-index: 999;
-      margin-top: -40px;
-      text-decoration: none;
-    }
+.section li {
+  margin-bottom: 10px;
+  color: #bbb;
+}
 
-    .btn-voltar :hover {
-      background-color: #00fff7;
-      color: #000;
-    }
+.btn-voltar {
+  background-color: #1a1a1a;
+  border: 1px solid #00fff7;
+  color: #00fff7;
+  padding: 10px 20px;
+  border-radius: 8px;
+  font-size: 1em;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: absolute;
+  left: 20px;
+  z-index: 999;
+  margin-top: -40px;
+  text-decoration: none;
+}
 
-    footer {
-      background-color: #222;
-      color: #ccc;
-      text-align: center;
-      padding: 20px;
-    }
+.btn-voltar:hover {
+  background-color: #00fff7;
+  color: #000;
+}
 
-    footer .social-icons i {
-      color: #00f0ff;
-      font-size: 30px;
-      margin: 0 15px;
-      cursor: pointer;
-      transition: color 0.3s ease;
-    }
+footer {
+  background-color: #222;
+  color: #ccc;
+  text-align: center;
+  padding: 20px;
+}
 
-    footer .social-icons i:hover {
-      color: #08bac7;
-    }
+footer .social-icons i {
+  color: #00f0ff;
+  font-size: 30px;
+  margin: 0 15px;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+footer .social-icons i:hover {
+  color: #08bac7;
+}
+
+/* === RESPONSIVIDADE PARA MOBILE === */
+@media (max-width: 768px) {
+  header {
+    padding: 10px;
+  }
+
+  header h2 {
+    font-size: 1.2rem;
+  }
+
+  header h1 {
+    font-size: 1.3rem;
+  }
+
+  header p {
+    font-size: 0.8rem;
+  }
+
+  .container {
+    padding: 10px;
+  }
+
+  .intro p {
+    font-size: 1rem;
+  }
+
+  .section h2 {
+    font-size: 1.3rem;
+  }
+
+  .section ul {
+    padding-left: 15px;
+  }
+
+  .section li {
+    font-size: 0.9rem;
+  }
+
+  footer .social-icons i {
+    font-size: 24px;
+  }
+}
   </style>
 </head>
 <body>
