--- a/projetos-tour.html
+++ b/projetos-tour.html
@@ -5,215 +5,258 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projetos | Tour Virtual 360° - AIVRSE</title>
   <style>
-    /* Reset básico */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+<style>
+  /* Reset básico */
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0d0d0d;
-      color: #f0f0f0;
-      position: relative;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #0d0d0d;
+    color: #f0f0f0;
+    position: relative;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
 
-    header, footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #ffffff;
-    }
+  header, footer {
+    text-align: center;
+    padding: 10px;
+    background-color: #ffffff;
+  }
 
-    footer, p {
-      color: #1a1a1a;
-    }
+  footer, p {
+    color: #1a1a1a;
+  }
 
+  header img {
+    max-width: 250px;
+    height: auto;
+  }
+
+  .projects-section {
+    background-color: #0d0d0d;
+    padding: 60px 20px 100px 20px;
+    flex: 1;
+  }
+
+  .section-title {
+    font-size: 2.5em;
+    color: #00fff7;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+
+  .section-subtitle {
+    font-size: 1.2em;
+    color: #cccccc;
+    margin-bottom: 50px;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px;
+    padding: 0 20px;
+  }
+
+  .project-card {
+    background: #1a1a1a;
+    border-radius: 16px;
+    overflow: hidden;
+    box-shadow: 0 4px 20px rgba(0, 255, 247, 0.15);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .project-card:hover {
+    transform: translateY(-8px);
+    box-shadow: 0 10px 30px rgba(0, 255, 247, 0.25);
+  }
+
+  .project-card iframe,
+  .project-card img {
+    width: 100%;
+    height: 280px;
+    object-fit: cover;
+    border: none;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+  }
+
+  .project-info {
+    padding: 25px 20px;
+    flex-grow: 1;
+  }
+
+  .project-info h3 {
+    font-size: 1.4em;
+    color: #00fff7;
+    margin-bottom: 10px;
+  }
+
+  .project-info p {
+    font-size: 0.95em;
+    color: #dddddd;
+  }
+
+  .expand-btn {
+    margin-top: 15px;
+    padding: 10px 16px;
+    background-color: #99999917;
+    border: 1px solid #00fff7;
+    color: #00fff7;
+    font-weight: bold;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 100%;
+    font-size: 1em;
+  }
+
+  .expand-btn:hover {
+    background-color: #00cccc;
+  }
+
+  /* Botão Voltar */
+  .back-button-container {
+    position: absolute;
+    bottom: 100px;
+    left: 20px;
+    z-index: 999;
+  }
+
+  .back-button {
+    background-color: #1a1a1a;
+    border: 1px solid #00fff7;
+    color: #00fff7;
+    padding: 10px 20px;
+    border-radius: 8px;
+    font-size: 1em;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+  .back-button:hover {
+    background-color: #00fff7;
+    color: #000;
+  }
+
+  /* Modal estilo fullscreen */
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.95);
+    z-index: 1000;
+    display: none;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal iframe {
+    width: 90vw;
+    height: 90vh;
+    border: none;
+    border-radius: 12px;
+  }
+
+  .modal-close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+  }
+
+  /* === RESPONSIVIDADE PARA MOBILE === */
+  @media (max-width: 768px) {
     header img {
-      max-width: 250px;
-      height: auto;
-    }
-
-    .projects-section {
-      background-color: #0d0d0d;
-      padding: 80px 20px 120px 20px; /* Espaço extra para o botão não sobrepor */
-      flex: 1;
+      max-width: 200px;
     }
 
     .section-title {
-      font-size: 2.5em;
-      color: #00fff7;
-      margin-bottom: 10px;
-      text-align: center;
+      font-size: 2rem; /* Menor em mobile */
     }
 
     .section-subtitle {
-      font-size: 1.2em;
-      color: #cccccc;
-      margin-bottom: 50px;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .projects-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 30px;
-      padding: 0 20px;
-    }
-
-    .project-card {
-      background: #1a1a1a;
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 4px 20px rgba(0, 255, 247, 0.15);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-    }
-
-    .project-card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 10px 30px rgba(0, 255, 247, 0.25);
+      font-size: 1em;
     }
 
     .project-card iframe,
     .project-card img {
-      width: 100%;
-      height: 280px;
-      object-fit: cover;
-      border: none;
-      border-top-left-radius: 16px;
-      border-top-right-radius: 16px;
-    }
-
-    .project-info {
-      padding: 25px 20px;
-      flex-grow: 1;
+      height: 220px;
     }
 
     .project-info h3 {
-      font-size: 1.4em;
-      color: #00fff7;
-      margin-bottom: 10px;
+      font-size: 1.1em;
     }
 
     .project-info p {
-      font-size: 0.95em;
-      color: #dddddd;
+      font-size: 0.85em;
     }
 
-    .expand-btn {
-      margin-top: 15px;
-      padding: 10px 16px;
-      background-color: #99999917;
-      border: 1px solid #00fff7;
-      color: #00fff7;
-      font-weight: bold;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      width: 100%;
-      font-size: 1em;
-    }
-
-    .expand-btn:hover {
-      background-color: #00cccc;
-    }
-
-    /* Botão Voltar posicionado no canto inferior direito */
     .back-button-container {
-      position: absolute;
-      bottom: 100px;
-      left: 20px;
+      bottom: 90px;
+      left: 50%;
+      transform: translateX(-50%);
       z-index: 999;
     }
 
     .back-button {
-      background-color: #1a1a1a;
-      border: 1px solid #00fff7;
-      color: #00fff7;
-      padding: 10px 20px;
-      border-radius: 8px;
+      width: 80vw;
+      max-width: 100px;
+      font-size: 0.95em;
+      padding: 12px 16px;
+      text-align: center;
+    }
+
+    footer {
+      padding: 15px;
+      font-size: 0.9em;
+      text-align: center;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .section-title {
+      font-size: 1.7em;
+    }
+
+    .section-subtitle {
+      font-size: 0.9em;
+    }
+
+    header img {
+      width: 80%;
+    }
+
+    .project-info h3 {
       font-size: 1em;
-      cursor: pointer;
-      transition: all 0.3s ease;
     }
 
-    .back-button:hover {
-      background-color: #00fff7;
-      color: #000;
+    .project-info p {
+      font-size: 0.8em;
     }
 
-    /* Modal estilo fullscreen */
-    .modal {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: rgba(0, 0, 0, 0.95);
-      z-index: 1000;
-      display: none;
-      justify-content: center;
-      align-items: center;
+    .back-button {
+      font-size: 0.9em;
+      padding: 10px 14px;
     }
-
-    .modal iframe {
-      width: 90vw;
-      height: 90vh;
-      border: none;
-      border-radius: 12px;
-    }
-
-    .modal-close {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      font-size: 24px;
-      color: white;
-      cursor: pointer;
-    }
-
-    @media (max-width: 480px) {
-      .section-title {
-        font-size: 2em;
-      }
-
-      .section-subtitle {
-        font-size: 1em;
-      }
-
-      header img {
-        width: 80%;
-      }
-
-      .project-card iframe,
-      .project-card img {
-        height: 220px;
-      }
-
-      .project-info h3 {
-        font-size: 1.2em;
-      }
-
-      .project-info p {
-        font-size: 0.9em;
-      }
-
-      .back-button-container {
-        position: static;
-        margin-top: 20px;
-        display: flex;
-        justify-content: flex-end;
-        padding: 0 20px;
-      }
-    }
+  }
+</style>
   </style>
 </head>
 <body>
@@ -267,7 +310,9 @@
 
   <!-- Botão Voltar posicionado abaixo dos cards -->
   <div class="back-button-container">
-    <button class="back-button" onclick="window.history.back()">Voltar</button>
+    <a href="index.html">
+      <button class="back-button">Voltar</button>
+    </a>
   </div>
 
   <footer>
