--- a/projetos-tour.html
+++ b/projetos-tour.html
@@ -187,12 +187,13 @@
       max-width: 200px;
     }
 
-    .section-title {
-      font-size: 2rem; /* Menor em mobile */
+    .section-title, h2{
+      font-size: 1.8rem; /* Menor em mobile */
     }
 
     .section-subtitle {
       font-size: 1em;
+      text-align: center;
     }
 
     .project-card iframe,
@@ -209,7 +210,7 @@
     }
 
     .back-button-container {
-      bottom: 90px;
+      bottom: 100px;
       left: 50%;
       transform: translateX(-50%);
       z-index: 999;
@@ -225,7 +226,7 @@
 
     footer {
       padding: 15px;
-      font-size: 0.9em;
+      font-size: 0.7em;
       text-align: center;
     }
   }
