--- a/index.html
+++ b/index.html
@@ -167,26 +167,24 @@
 
 .section3-container {
   display: flex;
-  flex-wrap: wrap; /* Permite quebrar linha se necessário */
-  justify-content: center; /* Centraliza horizontalmente */
-  gap: 20px; /* Espaçamento entre cards */
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 40px;
 }
 
 /* Estilo dos Cards */
 .service-card {
-  display: flex;
-  flex-direction: column; /* Para mobile */
-  background-color: #1f1f1f;
-  padding: 30px;
-  border: 1px solid #333;
+ background-color: #1f1f1f;
+  padding: 20px;
   border-radius: 12px;
-  transition: all 0.3s ease;
-  text-decoration: none;
-  color: inherit;
-  width: calc(33.33% - 20px); /* Divide a largura em 3 partes (33.33%) menos o espaçamento */
-  min-width: 300px; 
-  max-width: 350px;
+  text-align: center;
+  width: 100%;
+  max-width: 320px;
   box-shadow: 0 0 5px rgba(0, 240, 255, 0.8), inset 0 0 5px rgba(0, 240, 255, 0.8);
+  color: inherit;
+  text-decoration: none;
+  transition: transform 0.3s ease;
 }
 
 .service-card:hover {
@@ -195,17 +193,19 @@
 }
 
 .service-card img {
-  width: 100%; /* Imagem ocupa toda a largura do card */
-  height: auto; /* Mantém proporção correta */
+  width: 100%;
+  height: 200px;
   object-fit: cover;
   border-radius: 10px;
-  margin-bottom: 15px; /* Espaço entre imagem e texto */
+  margin-bottom: 15px;
 }
+
 
 .service-card .texto h3 {
   color: #00ffff;
   font-size: 24px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .service-card .texto p {
@@ -381,7 +381,7 @@
 
       <!-- Card 3 -->
       <div class="service-card blur">
-        <img src="imagens/vrimg.png" alt="Realidade Virtual">
+        <img src="imagens/VR_img.png" alt="Realidade Virtual">
         <div class="texto">
           <h3>Realidade Virtual</h3>
           <p>Experiências totalmente imersivas utilizando óculos VR e interações intuitivas.</p>
