--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
       color: #757474;
       margin-top: 1rem;
     }
+    .highlight-link {
+  color: #08bac7; /* substitua pela cor azul que você está usando */
+  text-decoration: none;
+}
+.highlight-link:hover {
+  text-decoration: underline;
+}
+
     .byline {
       font-size: 0.9rem;
       color: #999;
@@ -331,10 +339,9 @@
     <div class="container">
       <div class="axlara-brand">AX-LARA</div>
       <h1>Architect of Xperience</h1>
-      <h2>XR Specialist • 3D Design • Founder AIVRSE</h2>
+     <h2>XR Specialist • 3D Designer • Founder <a href="#section3" class="highlight-link">AIVRSE</a></h2>
       <p class="byline">by Lara E. Negreiros</p>
       <a href="portfolio.html" class="button">Stack & Skills</a>
-      <a href="#section3" class="button">AIVRSE</a>
     </div>
     <div class="hero-image">
       <img src="/imagens/imagelarasf.png" alt="Lara E. Negreiros">
