--- a/portfolio.html
+++ b/portfolio.html
@@ -145,10 +145,13 @@ footer .social-icons i:hover {
 
   .section h2 {
     font-size: 1.3rem;
+     margin-left: 10px;
+    margin-right: 10px;
   }
 
-  .section ul {
-    padding-left: 15px;
+    .section ul {
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .section li {
@@ -241,10 +244,10 @@ footer .social-icons i:hover {
     <!-- Introdução -->
     <div class="intro">
       <p>
-        Esta página apresenta de forma objetiva minhas stacks, habilidades técnicas e ferramentas utilizadas nos serviços como freelancer em experiências imersivas.
+       Aqui você encontra um resumo direto das stacks, ferramentas e habilidades que fui desenvolvendo ao longo da minha jornada.
       </p>
       <p>
-        Atuo com modelagem 3D otimizada, criação de tours virtuais 360°, integração em plataformas web, além do desenvolvimento de projetos em Realidade Aumentada (AR) e Realidade Virtual (VR).
+        Hoje atuo como freelancer em modelagem 3D otimizada, criação de tours virtuais 360°, integração em plataformas web, além do desenvolvimento de projetos em Realidade Aumentada (AR) e Realidade Virtual (VR).
       </p>
       <p>
         Também utilizo ferramentas de Inteligência Artificial para acelerar fluxos de trabalho, mantendo uma postura de constante aprendizado e adaptação a novas tecnologias.
