--- a/index.html
+++ b/index.html
@@ -42,6 +42,46 @@
     .language-bar button:hover {
       opacity: 0.7;
     }
+/* Ajusta a barra de tradução do Google no mobile */
+.goog-te-banner-frame.skiptranslate {
+  display: none !important;
+}
+body {
+  top: 0px !important;
+}
+
+.goog-te-gadget {
+  font-family: 'Poppins', sans-serif !important;
+  font-size: 14px;
+  color: #00f0ff;
+}
+
+.goog-te-combo {
+  padding: 6px;
+  border-radius: 6px;
+  border: none;
+  font-family: 'Poppins', sans-serif;
+  background-color: #fff;
+  color: #333;
+}
+
+.goog-te-gadget-icon {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .language-bar {
+    top: 0;
+    right: 0;
+    flex-wrap: wrap;
+  }
+
+  .goog-te-combo {
+    font-size: 13px;
+    width: 100%;
+    margin-top: 6px;
+  }
+}
 
     /* Marca AX-LARA */
     .axlara-brand {
@@ -255,13 +295,18 @@
 
   
     /* Footer */
+
     footer {
-      background-color: #111;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-      width: 100%;
-    }
+  background-color: #111;
+  color: #fff;
+  padding: 20px;
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
     footer .social-icons i {
       color: #00f0ff;
       font-size: 30px;
@@ -272,6 +317,16 @@
     footer .social-icons i:hover {
       color: #08bac7;
     }
+@media (max-width: 768px) {
+  .section3-container {
+    padding: 20px 10px;
+  }
+
+  footer {
+    padding: 20px 10px;
+    box-sizing: border-box;
+  }
+}
 
     /* Responsividade Geral */
     @media (max-width: 768px) {
